--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <article>
     <p class="paragraph-one">
-      freeCodeCamp is one of the best platforms to learn how to code
+     welcome
     </p>
     <p class="paragraph-two">
       Learning to code is free on freeCodeCamp, that's why they call it
