--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <article>
     <p class="paragraph-one">
-     welcome
+     welcome to devops
     </p>
     <p class="paragraph-two">
       Learning to code is free on freeCodeCamp, that's why they call it
